finalização do css, responsividade da pag login e cadastro e lógica dos botões de navegação entre as páginas home, login e cadastro

--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -11,6 +11,8 @@ html{
     --color-black: #000000;
     --color-black-transparent-10: #00000010;
     --color-black-transparent-20: #00000020;
+    --color-black-transparent-50: #00000050;
+    --color-black-transparent-95: #00000095;
     --color-red: #CE4646;
     --color-green: #4BA036;
 
