--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -36,6 +36,7 @@ body>header{
 .openBtn{
     height: 15px;
     width: 23px;
+    margin-right: 10px;
     background-image: '../assets/images/openBtn.png';
 }
 
@@ -45,7 +46,7 @@ body>header{
     display: flex;
     position: fixed;
     top: 18px;
-    right: 10px;
+    right: 20px;
     background-color: var(--color-white);
 }
 
@@ -144,9 +145,70 @@ main{
     padding-left: 65px;
     box-sizing: border-box;
 }
+.main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
+.sectionSelectAndCards{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.divCardsList{
+    display: flex;
+    width: 100vw;
+    margin-left: 40px;
+}
+
+.ulCardsList{
+    display: flex;
+    flex-direction: row;
+    overflow-y: scroll;
+    gap: 19px;
+    margin-top: 25px;
+    width: 100vw;
+}
+
+.liCard{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    padding-left: 15px;
+    border-bottom: 1px solid var(--color-blue);
+    min-width: 210px;
+    height: 211px;
+}
+
+.title{
+    font-size: var(--font-size-4);
+    font-weight: var(--font-weight-2);
+    margin-top: 13px;
+}
+
+.hours{
+    font-size: var(--font-size-6);
+    font-weight: var(--font-weight-3);
+    margin-top: 50px;
+}
+
+.tagSetor{
+    font-size: var(--font-size-6);
+    font-weight: var(--font-weight-3);
+    color: var(--color-blue);
+    border: 1px solid var(--color-blue);
+    border-radius: 255px;
+    padding: 10px;
+    margin-bottom: 30px;
+}
 @media(min-width: 768px){
     body{
+        width: 100vw;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -160,14 +222,15 @@ main{
     }
 
     main{
-        width: 490px;
-        height: 470px;
+        width: 100vw;
+        height: 100vh;
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
         background-color: var(--color-white);
         margin-top: 35px;
+        /* gap: 30px; */
     }
 
     main>div{
@@ -177,14 +240,84 @@ main{
         width: 100%;
         height: 100%;
         gap: 13px;
+        position: relative;
     }
-
+    #setores{
+        display: flex;
+        width: 40vw;
+        height: 45px;
+        color: var(--color-white);
+        background-color: var(--color-blue);
+        font-size: var(--font-size-5);
+        border: none;
+        padding-left: 65px;
+        box-sizing: border-box;
+        position: absolute;
+        top: 15px;
+        margin-left: 40px;
+    }
     .hidding{
         display: flex;
-        width: 550px;
-        height: 80%;
-        border: 2px solid red;
-        background-image: url(../assets/images/backgroundDesktop.png);
+        width: 305px;
+        height: 460px;
+        position: inherit;
+        background-image: url(../assets/images/homepageImage.png);
+    }
+    .sectionSelectAndCards{
+        display: flex;
+        /* margin-right: 100px; */
+    }
+    
+    .divCardsList{
+        display: flex;
+        width: 40vw;
+        overflow-y: scroll;
+    }
+    
+    .ulCardsList{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        overflow: scroll;
+        gap: 19px;
+        position: absolute;
+        top: 130px;
+        height: 405px;
+        width: 40vw;
+    }
+    
+    .liCard{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        padding-left: 15px;
+        border-bottom: 1px solid var(--color-blue);
+        min-width: 210px;
+        height: 211px;
+        gap: 10px;
+    }
+    
+    .title{
+        font-size: var(--font-size-4);
+        font-weight: var(--font-weight-2);
+        margin-top: 13px;
+    }
+    
+    .hours{
+        font-size: var(--font-size-6);
+        font-weight: var(--font-weight-3);
+        margin-top: 10px;
+    }
+    
+    .tagSetor{
+        font-size: var(--font-size-6);
+        font-weight: var(--font-weight-3);
+        color: var(--color-blue);
+        border: 1px solid var(--color-blue);
+        border-radius: 255px;
+        padding: 10px;
+        margin-bottom: 20px;
     }
 
     .menuMobile{
