--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -153,7 +153,7 @@ main>div{
     gap: 13px;
 }
 
-main>div>div>section{
+.fazerOLogin{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -225,22 +225,13 @@ main>div>div>form>p{
     font-weight: var(--font-weight-2);
 }
 
-main>div>div>section>input{
+.fazerOLogin>input{
     width: 90%;
     height: 45px;
     border: 1px solid var(--color-black-transparent-20);
     color: var(--color-black-transparent-50);
     padding: 17px auto 13px 20px !important;
     box-sizing: border-box;
-}
-
-main>div>div>section>select{
-    width: 90%;
-    height: 45px;
-    padding: 17px auto 13px 20px;
-    box-sizing: border-box;
-    border: 1px solid var(--color-black-transparent-20);
-    color: var(--color-black-transparent-95);
 }
 
 @media(min-width: 768px){
