--- a/src/styles/dashAdmin.css
+++ b/src/styles/dashAdmin.css
@@ -10,9 +10,25 @@ body{
     display: none;
 }
 
-.buttonsHomeAndLoginDesktop{
-    display: none;
+.sectionSelectAndCardsAdmin{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 100px;
+    align-items: flex-start;
 }
+
+.ulCardsDepartamentos{
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+
+}
+
+/* .buttonsHomeAndLoginDesktop{
+    display: none;
+} */
 
 .menuMobile{
     display: flex;
@@ -127,6 +143,7 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 100px;
 }
 
 .hidding{
@@ -146,7 +163,7 @@ main{
     box-sizing: border-box;
 }
 .main{
-    display: flex; 
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -207,6 +224,12 @@ main{
     margin-bottom: 30px;
 }
 @media(min-width: 768px){
+
+    .sectionSelectAndCardsAdmin{
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+    }
     body{
         width: 100vw;
         display: flex;
@@ -225,12 +248,12 @@ main{
         width: 100vw;
         height: 100vh;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         background-color: var(--color-white);
         margin-top: 35px;
-        /* gap: 30px; */
+        gap: 100px;
     }
 
     main>div{
@@ -320,9 +343,9 @@ main{
         margin-bottom: 20px;
     }
 
-    .menuMobile{
+    /* .menuMobile{
         display: none;
-    }
+    } */
 
     .buttonsHomeAndLoginDesktop{
         display: flex;
@@ -338,4 +361,47 @@ main{
         height: 38px;
         width: 132px;
     }
+}
+
+.divBackground{
+    position: fixed;
+    display: none;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-grey-opacity-1);
+}
+
+.modal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    width: 530px;
+    z-index: 4;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--color-white);
+    padding: 3rem 1rem;
+    gap: 10px;
+    border-radius: 10px;
+}
+
+.close{
+    border: 1px solid var(--color-grey-7);
+    border-radius: 100%;
+    width: 35px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    padding: 1.8%;
+    font-weight: 700;
+    background-color: transparent;
+}
+
+.close:hover{
+    cursor: pointer;
 }
