--- a/src/styles/dashAdmin.css
+++ b/src/styles/dashAdmin.css
@@ -29,7 +29,7 @@ body{
 }
 
 .divBackgroundVisualizar{
-    position: fixed;
+    position: relative;
     display: none;
     z-index: 3;
     top: 0;
@@ -38,6 +38,14 @@ body{
     height: 100%;
     background-color: var(--color-grey-opacity-1);
 }
+
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+
 .divBackgroundEditar{
     position: fixed;
     display: none;
