mudanças no layout homepage

--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -7,7 +7,8 @@ html{
 
 :root{
     --color-blue: #4200FF;
-    --color-white: #FFFFFF;
+    --color-white: #ffffff;
+    --color-white-transparent: #b4afaf71;
     --color-black: #000000;
     --color-black-transparent-10: #00000010;
     --color-black-transparent-20: #00000020;
@@ -15,6 +16,8 @@ html{
     --color-black-transparent-95: #00000095;
     --color-red: #CE4646;
     --color-green: #4BA036;
+
+    --color-dark-blue: rgb(2,0,36);
 
     --font-weight-1: 800;
     --font-weight-2: 700;
