--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -4,6 +4,7 @@ body{
     background-size: cover;
     display: flex;
     flex-direction: column;
+    background-image: linear-gradient(to bottom, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
 }
 
 .figcaption{
@@ -27,8 +28,9 @@ body>header{
     width: 100%;
     height: 60px;
     border: 1px solid var(--color-black-transparent-20);
+    border-radius: 0px 0px 15px 15px;
     z-index: 1;
-    background-color: var(--color-white);
+    background-color: var(--color-white-transparent);
     position:fixed;
     top: 0;    
 }
@@ -47,7 +49,7 @@ body>header{
     position: fixed;
     top: 18px;
     right: 20px;
-    background-color: var(--color-white);
+    background-color: none;
 }
 
 header>div:first-child{
@@ -87,7 +89,7 @@ header>div:first-child>h1{
     right: 0px;
     width: 100%;
     height: 80px;
-    background-color: var(--color-white);
+    background-color: var(--color-white-transparent);
 }
 
 .menuAsideContent>ul{
@@ -213,6 +215,7 @@ main{
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        background-image: linear-gradient(to bottom, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
     }
 
     body>header{
