--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -1,18 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
 
 html{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
+*{
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 :root{
     --color-blue: #4200FF;
     --color-white: #ffffff;
+    --color-white-transparent-20: #ffffff84;
     --color-white-transparent: #b4afaf71;
     --color-black: #000000;
     --color-black-transparent-10: #00000010;
     --color-black-transparent-20: #00000020;
     --color-black-transparent-50: #00000050;
+    --color-black-transparent-70: #00000070;
+    --color-black-transparent-80: #00000080;
+    --color-black-transparent-90: #00000090;
     --color-black-transparent-95: #00000095;
     --color-red: #CE4646;
     --color-green: #4BA036;
@@ -22,6 +30,9 @@ html{
     --font-weight-1: 800;
     --font-weight-2: 700;
     --font-weight-3: 400;
+
+    --extra-font-weight-4: 500;
+    --extra-font-weight-5: 600;
 
     --font-family-poppins: 'Poppins', sans-serif;
 
